...
    <string name="log_debug">Ping.IT Debug</string>
    <string name="log_info">Ping.IT Info</string>
    <string name="log_warning">Ping.IT Warn</string>
    <string name="log_error">Ping.IT Err</string>
    <string name="titleActivityHome">Ping.IT</string>
    <string name="loginWelcomeMessage">Welcome to Ping.IT. Please sign in.</string>
    <string name="loginBtn">Login</string>
    <string name="logoutBtn">Logout</string>
    <string name="faqSectionTitle">FAQ</string>
    <string name="chatSectionTitle">Chat</string>
    <string name="pingsSectionTitle">Pings</string>

    <string name="noNetworkConnectionMsg">Unable to connect to Ping.IT server. Please check network settings.</string>

    <string name="startupTitleLogin">Login to Ping.IT</string>
    <string name="startupTitleRegister">Register with Ping.IT</string>
    <string name="registerNamePlaceholder">First Name</string>
...
    <string name="loginSwitchToRegisterBtn">Create an account</string>
    <string name="titleActivitySettings">Settings</string>
    <string name="passwordsDontMatch">Please enter matching passwords.</string>
    <string name="nameNotValid">Please enter a valid name.</string>
    <string name="emailAlreadyInUse">" is already in use. Please enter a different email."</string>
    <string name="isNotAValidEmail">" is not a valid email. Please use your school email."</string>
    <string name="emailNotValid">Please use your school email.</string>
    <string name="invalidCredentials">Email or password is incorrect. Please try again.</string>
    <string name="dialogConfirm">Okay</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="loginSuccessMsg">Login Successful!</string>
    <string name="signingInDialogMsg">Signing into Ping.IT…</string>
    <string name="signingOutDialogMsg">Signing out…</string>
    <string name="dialogCancel">Cancel</string>
    <string name="confirmLogoutMsg">Are you sure you would like to log out?</string>
    <string name="passwordTooShort">Please enter a password of at least 8 characters.</string>
    <string name="passwordMissingCharacters">Password must contain letters and numbers.</string>
    <string name="passwordNotValid">Please enter a valid password.</string>
    <string name="prefs_notification_sound_key">notification_sound_preference</string>
    <string name="prefs_notification_sound_title">Notification Sound</string>
    <string name="prefs_notification_sound_summary">Should display current sound</string>
    <string name="prefs_notification_resend_toggle_key">notification_resend_toggle</string>
    <string name="prefs_notification_resend_toggle_title">Notification Resend</string>
    <string name="prefs_notification_resend_toggle_summaryoff">Notification will only be sent once.</string>
...
