<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.gcc.whiletrue.pingit.HomeActivity">
    <item
        android:id="@+id/menu_home_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings_icon"
        app:showAsAction="ifRoom" />
</menu>
